--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap' rel='stylesheet'
         type='text/css'>
     <link rel="stylesheet" href="/css/styleLogin.css">
-    <link rel="stylesheet" href="/bootstrap/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <title>Login | Vunt</title>
 </head>
 
