--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -2,6 +2,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+form {
+    all: initial;
+}
+
 .wrapper {
     background: #ececec;
     padding: 0 20px 0 20px;
