--- a/views/register.ejs
+++ b/views/register.ejs
@@ -28,7 +28,7 @@
                             <header>Register</header>
                             <% if(alert!=null) {%>
                                 <div class="input-field">
-                                    <span style="color: red; text-align: center;">
+                                    <span class="redAlert">
                                         <%=alert%>
                                     </span>
                                 </div>
