--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -11,6 +11,12 @@ form {
     padding: 0 20px 0 20px;
 }
 
+.redAlert {
+    color: red; 
+    text-align: center; 
+    margin-bottom: 1rem;
+}
+
 .main {
     display: flex;
     justify-content: center;
