--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -14,6 +14,7 @@
 @import './Components/testimonial';
 @import './Components/bg-video';
 @import './Components/popup';
+@import './Components/form';
 
 @import './Layout/navigation';
 @import './Layout/header';
