--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -11,8 +11,14 @@ form {
     padding: 0 20px 0 20px;
 }
 
-.redAlert {
+.textFail {
     color: red; 
+    text-align: center; 
+    margin-bottom: 1rem;
+}
+
+.textSuccess {
+    color: green; 
     text-align: center; 
     margin-bottom: 1rem;
 }
