--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,11 +23,11 @@
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About us</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Our Skills</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Our courses</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">About me</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Skills</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Courses</a></li>
                 <li class="navigation__item"><a href="#" class="navigation__link">Testimonials</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Enroll form</a></li>
+                <!-- <li class="navigation__item"><a href="#" class="navigation__link">Enroll form</a></li> -->
             </ul>
         </div>
     </div>
@@ -35,20 +35,19 @@
     <header class="header">
         <div class="header__logo-box">
             <!-- <img src="/img/logo.png" class="header__logo" alt="logo"> -->
-            <% if(username == null) {%>
-                <!-- <a href="/login" class="btn btn--white btn--animated">See my profile</a> -->
+            <% if(username==null) {%>
                 <div class="header__logo">
                     <a href="/login" class="btn-text">&larr; Log in</a>
                 </div>
-            <% } else { %>
-                <div class="header__logo">
-                    
-                    <a href="/login" class="btn-text">&larr; Log out</a>
-                    <span class="header__logo--text">
-                        &nbsp;&nbsp;Hello <%=username%>
-                    </span> 
-                </div>
-            <% } %>
+                <% } else { %>
+                    <div class="header__logo">
+
+                        <a href="/login" class="btn-text">&larr; Log out</a>
+                        <span class="header__logo--text">
+                            &nbsp;&nbsp;Hello <%=username%>
+                        </span>
+                    </div>
+                    <% } %>
         </div>
         <div class="header__text-box">
             <h3 class="heading-primary">
@@ -58,10 +57,10 @@
                     </span>
                 <% } %> -->
 
-                        <span class="heading-primary--main">Ojo's Space</span>
-                        <span class="heading-primary--sub">Life, Work and Play</span>
+                <span class="heading-primary--main">Ojo's Space</span>
+                <span class="heading-primary--sub">Life, Work and Play</span>
             </h3>
-            <a href="#" class="btn btn--white btn--animated">See my profile</a>
+            <a href="https://github.com/vuNTdabest" class="btn btn--white btn--animated">See my profile</a>
         </div>
     </header>
 
@@ -72,23 +71,23 @@
         <div class="row">
             <div class="col-1-of-2">
                 <h3 class="heading-tertiary u-margin-bottom-small">
-                    from then to now
+                    the love of programming
                 </h3>
                 <p class="paragraph">
-                    Spider-Man, comic-book character who was the original everyman superhero.
-                    In Spider-Man’s first story, in Marvel Comics’ Amazing Fantasy, no. 15 (1962),
-                    American teenager Peter Parker, a poor sickly orphan, is bitten by a radioactive spider.
-                    As a result of the bite, he gains superhuman strength, speed, and agility along with
-                    the ability to cling to walls.
+                    I don’t know when I fell in love with programming. I know that I just did.
+                    Maybe it was when I went to college and started participating in the coding events.
+                    Maybe it was before. But even before I had given my 12th board exams, I knew that
+                    I wanted to be a programmer.Engineering college opened up a whole new world for me.
+                    When I was writing code, I realized I was happiest, strong, I could even call myself invincible.
                 </p>
-                <h3 class="heading-tertiary u-margin-bottom-small">
+                <!-- <h3 class="heading-tertiary u-margin-bottom-small">
                     master your skills
                 </h3>
                 <p class="paragraph">
                     In addition to enhanced speed and strength,
                     Parker also possessed a precognitive “spider sense” that alerted him to approaching dangers.
-                </p>
-                <a href="#" class=btn-text>Learn more &rarr;</a>
+                </p> -->
+                <a href="https://flowcv.com/resume/f2fdad7ne0" class=btn-text>Read more &rarr;</a>
             </div>
 
             <div class="col-1-of-2">
@@ -105,8 +104,8 @@
         <div class="row">
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class="skill-box__icon fas fa-hourglass-half"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Language Skill</h3>
+                    <i class="skill-box__icon fas fa-light fa-building"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">CRM System</h3>
                     <div class="skill-box__text">
                         Write something about your language skill
                     </div>
@@ -115,8 +114,8 @@
 
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class="skill-box__icon fas fa-hourglass-half"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Study</h3>
+                    <i class="skill-box__icon fas fa-sharp fa-regular fa-cube"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Blockchain Technology</h3>
                     <div class="skill-box__text">
                         Write something about your school, major, favourite subjects,...
                     </div>
@@ -125,20 +124,28 @@
 
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class="skill-box__icon fas fa-hourglass-half"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Experiences</h3>
+                    <i class="skill-box__icon fas fa-solid fa-plus"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        add
+                        &nbsp;
+                    </h3>
                     <div class="skill-box__text">
-                        Write something related to your outside activities, researches,...
+                        &nbsp;
+                        <!-- Write something related to your outside activities, researches,... -->
                     </div>
                 </div>
             </div>
 
             <div class="col-1-of-4">
                 <div class="skill-box">
-                    <i class="skill-box__icon fas fa-hourglass-half"></i>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Archivements</h3>
+                    <i class="skill-box__icon fas fa-solid fa-plus"></i>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        add
+                        &nbsp;
+                    </h3>
                     <div class="skill-box__text">
-                        Write something about your works, liences,...
+                        &nbsp;
+                        <!-- Write something about your works, liences,... -->
                     </div>
                 </div>
             </div>
@@ -161,7 +168,7 @@
                         </div>
                         <h4 class="card__heading">
                             <span class="card__heading-span card__heading-span--1">
-                                control <br> your time
+                                web <br> Design
                             </span>
                         </h4>
                         <div class="card__details">
@@ -197,7 +204,7 @@
                         </div>
                         <h4 class="card__heading">
                             <span class="card__heading-span card__heading-span--2">
-                                make <br> mindmap
+                                graphic <br> designer
                             </span>
                         </h4>
                         <div class="card__details">
@@ -233,12 +240,12 @@
                         </div>
                         <h4 class="card__heading">
                             <span class="card__heading-span card__heading-span--3">
-                                make <br> your target
+                                Coding <br> Tutor
                             </span>
                         </h4>
                         <div class="card__details">
                             <ul>
-                                <li>30 hours</li>
+                                <li>3 months</li>
                                 <li>5 students</li>
                                 <li>5 star rated</li>
                             </ul>
@@ -327,50 +334,60 @@
         </div>
     </section>
 
-    <!-- <section class="section-enroll">
+    <section class="section-enroll">
         <div class="row">
             <div class="enroll">
-                <div class="enroll_form">
-                    <form class="form">
+                <div class="enroll__form">
+                    <form class="form" action="/home/comments" method="POST">
                         <div>
                             <h2 class="heading-secondary">
-                                enroll now
+                                feedback
                             </h2>
                         </div>
                         <div class="form__group">
-                            <input type="text" id="name" class="form__input" placeholder="full name" required>
-                            <label for="name" class="form__label">Full name</label>
-                        </div>
-                        <div class="form__group">
-                            <input type="email" id="email" class="form__input" placeholder="email" required>
                             <label for="email" class="form__label">Email</label>
+                            <input id="email" type="text" name="email" class="form__input" placeholder="email" required>
                         </div>
                         <div class="form__group">
-                            <div class="form__radio-group">
-                                <input type="radio" id="male" class="form__raido-input" name="gender">
-                                <label for="male" class="form__radio-label">
-                                    <span class="form__radio-button"></span>
-                                        Male
-                                </label>
-                            </div>
-                            <div class="form__radio-group">
-                                <input type="radio" id="female" class="form__raido-input" name="gender">
-                                <label for="female" class="form__radio-label">
-                                    <span class="form__radio-button"></span>
-                                        Female
-                                </label>
-                            </div>
+                            <label for="comment" class="form__label">Comment</label>
+                            <textarea id="comment" type="text" name="comment" style="height: 15rem; resize: none;"
+                                placeholder="Leave a comment" class="form__input"></textarea>
                         </div>
                         <div class="form__group">
-                            <button class="btn btn--green"> 
+                            <a href="#" class="btn btn--blue">
                                 Submit &rarr;
-                            </button>
+                            </a>
                         </div>
                     </form>
                 </div>
+                <div style="float: right;width: 50%;margin-top: 6rem">
+                    <div class="form">
+                        <div>
+                            <h2 class="heading-secondary">
+                                feedback
+                            </h2>
+                        </div>
+                        <div class="form__group">
+                            <label for="email" class="form__label">Email</label>
+                            <input id="email" type="text" name="email" class="form__input" placeholder="email" required>
+                        </div>
+                        <div class="form__group">
+                            <label for="comment" class="form__label">Comment</label>
+                            <textarea id="comment" type="text" name="comment" style="height: 15rem; resize: none;"
+                                placeholder="Leave a comment" class="form__input"></textarea>
+                        </div>
+                        <div class="form__group">
+                            <a href="#" class="btn btn--blue">
+                                Submit &rarr;
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </section> -->
+
+        <!-- </div> -->
+    </section>
 
     <footer class="footer">
         <div class="footer__logo-box">
@@ -417,11 +434,12 @@
                 <h2 class="heading-secondary u-margin-bottom-small">Enroll now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Pleases read these</h3>
                 <p class="popup__text">
-                    the description of the users of the courses
-                    the description of the users of the courses
-                    the description of the users of the courses
-                    the description of the users of the courses
-                    the description of the users of the courses
+                    <b>Typography</b><br>
+                    Learn all about typography as an integral element of graphic design<br>
+                    <b>Color</b><br>
+                    Learn all about color as an integral element of graphic design<br>
+                    <b>Layout and Composition</b><br>
+                    Learn all about layout and composition as an integral elements of graphic design
                 </p>
                 <a href="#" class="btn btn--green">Enroll now</a>
             </div>
