--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,17 +26,23 @@
                     <div class="col-md-6 right">
                         <div class="input-box">
                             <header>Register</header>
-                            <% if(alert!=null) {%>
-                                <div class="input-field">
-                                    <span class="redAlert">
+                            <div class="input-field">
+                                <% if(alert!=null) {%> 
+                                    <%if (alert == "Sign-up successful!!!") {%>
+                                        <span class="textSuccess">
                                         <%=alert%>
-                                    </span>
-                                </div>
-                            <% } %>
+                                        </span>
+                                    <% } else { %>
+                                        <span class="textFail">
+                                            <%=alert%>
+                                        </span>
+                                    <% } %>
+                                <% } %>
+                            </div>
                             <div class="input-field">
                                 <input type="text" class="input" id="username" name="username" required
                                     autocomplete="off">
-                                <label for="email">Username</label>
+                                <label for="username">Username</label>
                             </div>
                             <div class="input-field">
                                 <input type="text" name="email" class="input" id="email" required autocomplete="off">
