--- a/public/sass/Components/_buttons.scss
+++ b/public/sass/Components/_buttons.scss
@@ -86,3 +86,35 @@
     transition: all .2s;
 }
 
+
+//button green for comment submit
+.button-green {
+    background-color: initial;
+    background-image: linear-gradient(-180deg, #00D775, #00BD68);
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+    height: 44px;
+    line-height: 44px;
+    outline: 0;
+    overflow: hidden;
+    padding: 0 20px;
+    pointer-events: auto;
+    position: relative;
+    text-align: center;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: top;
+    white-space: nowrap;
+    width: 25%;
+    z-index: 9;
+    border: 0;
+  }
+  
+  .button-green:hover {
+    background: #00bd68;
+  }
