create, show post, show content page: on the way

--- a/public/sass/Pages/_home.scss
+++ b/public/sass/Pages/_home.scss
@@ -9,7 +9,7 @@
     }
 }
 
-.section-skills{
+.section-posts  {
     background-image: linear-gradient(to right bottom, 
     rgba($color-primary-light, .8), rgba($color-primary-dark, .8)),
     url("../img/bg.JPG");
