--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -9,7 +9,7 @@
 
 @import './Components/buttons'; 
 @import './Components/composition';
-@import './Components/skill-box';   
+@import './Components/post-box';   
 @import './Components/card'; 
 @import './Components/testimonial';
 @import './Components/bg-video';
