--- a/public/css/style.css
+++ b/public/css/style.css
@@ -275,7 +275,7 @@ body {
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20; }
 
-.skill-box {
+.post-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
   padding: 2.5rem 2.5rem 5rem 2.5rem;
@@ -283,14 +283,14 @@ body {
   border-radius: 5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: all .2s; }
-  .skill-box__icon {
+  .post-box__icon {
     font-size: 6rem;
     margin-bottom: 1.5rem;
     display: inline-block;
     background-image: linear-gradient(to right, #87cd8a, #368039);
     -webkit-background-clip: text;
     color: transparent; }
-  .skill-box:hover {
+  .post-box:hover {
     cursor: pointer;
     transform: translateY(-1.5rem) scale(1.03); }
 
@@ -523,7 +523,7 @@ body {
   border-bottom: 3px solid transparent;
   display: block;
   background-color: rgba(255, 255, 255, 0.5);
-  width: 80%;
+  width: 100%;
   transition: all .3s; }
   .form__input:focus {
     outline: none;
@@ -837,7 +837,7 @@ body {
       padding: 20rem 0;
       margin-top: -40rem; } }
 
-.section-skills {
+.section-posts {
   background-image: linear-gradient(to right bottom, rgba(135, 205, 138, 0.8), rgba(54, 128, 57, 0.8)), url("../img/bg.JPG");
   background-size: cover;
   position: relative;
