--- a/public/sass/Components/_post-box.scss
+++ b/public/sass/Components/_post-box.scss
@@ -1,4 +1,4 @@
-.skill-box{
+.post-box{
     background-color: rgba($color: $color-white, $alpha: .8);
     font-size: 1.5rem;
     padding: 2.5rem 2.5rem 5rem 2.5rem;
