show post content (click)

--- a/public/sass/Pages/_home.scss
+++ b/public/sass/Pages/_home.scss
@@ -12,7 +12,7 @@
 .section-posts  {
     background-image: linear-gradient(to right bottom, 
     rgba($color-primary-light, .8), rgba($color-primary-dark, .8)),
-    url("../img/bg.JPG");
+    url("../../img/tech-pic.jpeg");
     background-size: cover;
     position: relative;
     padding: 20rem 0;
