--- a/public/css/style.css
+++ b/public/css/style.css
@@ -111,6 +111,27 @@ body {
     transform: skewY(5deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+.heading-post {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  letter-spacing: 2rem;
+  cursor: pointer;
+  background-image: linear-gradient(to right, #d9d9d9, #bfbfbf);
+  color: transparent;
+  -webkit-background-clip: text;
+  transition: all .2s; }
+  @media (max-width: 900px) {
+    .heading-post {
+      font-size: 3rem; } }
+  @media (max-width: 600px) {
+    .heading-post {
+      font-size: 2.5rem; } }
+  .heading-post:hover {
+    transform: skewY(5deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
 .heading-tertiary {
   font-size: 1.6rem;
   font-weight: 700;
@@ -838,7 +859,7 @@ body {
       margin-top: -40rem; } }
 
 .section-posts {
-  background-image: linear-gradient(to right bottom, rgba(135, 205, 138, 0.8), rgba(54, 128, 57, 0.8)), url("../img/bg.JPG");
+  background-image: linear-gradient(to right bottom, rgba(135, 205, 138, 0.8), rgba(54, 128, 57, 0.8)), url("../../img/tech-pic.jpeg");
   background-size: cover;
   position: relative;
   padding: 20rem 0;
