--- a/public/sass/Base/_typography.scss
+++ b/public/sass/Base/_typography.scss
@@ -81,6 +81,37 @@ body {
     }
 }
 
+.heading-post{
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    letter-spacing: 2rem;
+    cursor: pointer;
+
+    @include respond(tab-port) {
+        font-size: 3rem;
+    }
+
+    @include respond(phone) {
+        font-size: 2.5rem;
+    }
+
+    background-image: linear-gradient(to right, 
+        #d9d9d9,
+        #bfbfbf
+    );
+    color: transparent;
+    -webkit-background-clip: text;
+
+    transition: all .2s;
+
+    &:hover{
+        transform: skewY(5deg) scale(1.1);
+        text-shadow: .5rem 1rem 2rem rgba($color: $color-black, $alpha: 0.2);
+    }
+}
+
 .heading-tertiary{
     font-size: 1.6rem;
     font-weight: 700;
