--- a/public/sass/Components/_buttons.scss
+++ b/public/sass/Components/_buttons.scss
@@ -86,6 +86,28 @@
     transition: all .2s;
 }
 
+.btn-text--white{
+    &:link,
+    &:visited{
+        color: $color-white;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-white;
+        padding: .3rem;
+        font-size: $default-font-size;
+    }
+    &:hover{
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+        transform: translateY(-0.2rem);
+    }
+    &:active{
+        box-shadow: 0 0.5rem 1rem rgba($color: $color-black, $alpha: 0.15);
+        transform: translateY(0);
+    }
+    transition: all .2s;
+}
 
 //button green for comment submit
 .button-green {
