--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,10 +23,10 @@
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#" class="navigation__link">About me</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Skills</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Courses</a></li>
-                <li class="navigation__item"><a href="#" class="navigation__link">Testimonials</a></li>
+                <li class="navigation__item"><a href="/" class="navigation__link">Home</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Post</a></li>
+                <li class="navigation__item"><a href="#" class="navigation__link">Comment</a></li>
+                <!-- <li class="navigation__item"><a href="#" class="navigation__link">Testimonials</a></li> -->
                 <!-- <li class="navigation__item"><a href="#" class="navigation__link">Enroll form</a></li> -->
             </ul>
         </div>
