--- a/views/post-content.ejs
+++ b/views/post-content.ejs
@@ -5,6 +5,8 @@
             <h2 class="heading-secondary">
                 <%= post.title %>
             </h2>
+            <br>
+            <span>Posted by <%=post.author%></span>
         </div>
         <div class="container">
             <p>
